# ChangeLog for dev-java/plexus-component-factories
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-factories-1.0_alpha9.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-factories-1.0_alpha9.ebuild:
  renaming EMAVEN_PROJECTS

  29 May 2007; kiorky <kiorky@cryptelium.net>
  plexus-component-factories-1.0_alpha9.ebuild:
  Adding maven bootstrap flag

  01 May 2007; kiorky <kiorky@cryptelium.net>
  +plexus-component-factories-1.0_alpha9.ebuild, +metadata.xml:
  Added as a maven dependency, #177503
