@@ -1,4 +1,4 @@
-DIST plexus-component-factories-1.0_alpha9.tar.bz2 39002 RMD160 dcd0b5c8a22e222ff0f9fb0688ce7aef0e1d5629 SHA1 2d596f6bd7b229a8cc5df8ca8a4426a55d3b389b SHA256 a8de3b15a9c003da0b163333d535f76900690516c288a8cecfe0f38288d09afa
-EBUILD plexus-component-factories-1.0_alpha9.ebuild 938 RMD160 ce86c96c95955d7fc0e168d67f574b8bc896024a SHA1 6a0883d4721ec7f9f6c4b00d08ac2bf96edb0361 SHA256 a6af4ecc9dc9e28534604f3ebf49dfc049cce04eebec1847397aaa2944762f4c
-MISC ChangeLog 661 RMD160 0bdeaab0235d59e69e5096517b892124c081aede SHA1 8834a6ac05d68cd48b4d5b37971eecde40809cee SHA256 099ad101e8521b9856d8aad97933cb956c21e6e2c8e90fcc57fbd1506934e97d
+DIST plexus-component-factories-1.0_alpha11_pre20070613.tar.bz2 54473 RMD160 2de03da6682a1d513312547a8378944349055726 SHA1 e05613855f425f25b5f9e39f4f652097b3073d4e SHA256 fb3a44c58312fcd8e65d1b8e5e68b5bdb901974fc5642fdce0f7e54d7e8facff
+EBUILD plexus-component-factories-1.0_alpha11_pre20070613.ebuild 1166 RMD160 1540b3b564657bade4083601e9a9a6407cdc020e SHA1 dacdf9ad283f1b3146b56e7b0553ae06b899351f SHA256 161f7b3057c0d0fcf22055872703b5f4ecefbb8574c62cd6c4e4a863407b352d
+MISC ChangeLog 840 RMD160 ab827b5c38fa89082a7a08d6c8cdd4dd9de52fb0 SHA1 39d624538f7de339a72a93bd66e56427f99e9583 SHA256 8ba39ff5d2f762411837cff20dd392720fdaabac810a0e10aac217d4c56dc604
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
